--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gedenkportal Korbach App</title>
-    <link href="FORMAT/FORMAT.css" rel="stylesheet">
+    <link href="FORMAT.css" rel="stylesheet">
 </head>
 <body bgcolor=#A6896F>
     <div id="topBox">
