--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gedenkportal Korbach App</title>
+    <link rel="icon" type="image/png" href="AppIconGedenkportalKB.png">
     <link href="FORMAT.css" rel="stylesheet">
 </head>
 <body bgcolor=#A6896F>
