--- a/FAQ.html
+++ b/FAQ.html
@@ -41,10 +41,10 @@
     
 <button class="accordion">Warum benötigt die App Zugriff auf meinen Standort?</button>
 <div class="panel">
-  <p>Die Gedenkportal App benötigt Zugriff auf Ihren Standort, um Sie korrekt zu den Stationen der Führungen zu führen. Dabei wird Ihr Standort zu keinem Zeitpunkt an die Betreiber der Gednekportal App übermittelt.</p>
+  <p>Die Gedenkportal App benötigt Zugriff auf Ihren Standort, um Sie korrekt zu den Stationen der Führungen zu führen. Dabei wird Ihr Standort zu keinem Zeitpunkt an die Betreiber der Gedenkportal App übermittelt.</p>
 </div>
 
-<button class="accordion">Wird es die Gedenkportal- Korbach App auf für Android geben?</button>
+<button class="accordion">Wird es die Gedenkportal-Korbach App auf für Android geben?</button>
 <div class="panel">
   <p>Wir arbieten zur Zeit daran, dass wir die Gedenkportal-Korbach App ebenfalls für Android veröffentlichen können. Bitte entschuldigen Sie mögliche verzögerungen. Sobald die Android App verfügbar ist, werden wir Sie hier informieren.</p>
 </div>
