--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-itunes-app" content="app-id=1557701231">
     <title>Gedenkportal Korbach App</title>
     <link rel="icon" href="AppIconGedenkportalKB.png">
     <link href="FORMAT.css" rel="stylesheet">
